@@ -1,13 +1,14 @@
 package CSTEpisodicMemory.impulses;
 
-import CSTEpisodicMemory.util.Vector2D;
 import br.unicamp.cst.core.entities.Codelet;
 import br.unicamp.cst.core.entities.Memory;
+import br.unicamp.cst.core.entities.MemoryContainer;
 import br.unicamp.cst.core.entities.MemoryObject;
 import br.unicamp.cst.representation.idea.Idea;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static CSTEpisodicMemory.util.IdeaPrinter.fullPrint;
 
@@ -16,11 +17,10 @@ public class GoToJewelImpulse extends Codelet {
     private Memory innerSenseMO;
     private Memory leafletMO;
     private Memory jewelsMO;
-    private Memory impulsesMO;
+    private MemoryContainer impulsesMO;
     private Idea inner;
     private Idea leaflets;
     private Idea jewels;
-    private Idea impulses;
 
     private double minDesire = 0.7, maxDesire = 0.8;
     private String impulseCat = "GoTo";
@@ -33,8 +33,7 @@ public class GoToJewelImpulse extends Codelet {
         this.leaflets = (Idea) leafletMO.getI();
         this.jewelsMO = (MemoryObject) getInput("KNOWN_JEWELS");
         this.jewels = (Idea) jewelsMO.getI();
-        this.impulsesMO = (MemoryObject) getOutput("IMPULSES");
-        this.impulses = (Idea) impulsesMO.getI();
+        this.impulsesMO = (MemoryContainer) getOutput("IMPULSES");
     }
 
     @Override
@@ -62,20 +61,19 @@ public class GoToJewelImpulse extends Codelet {
     }
 
     private void removeSatisfiedImpulses() {
-        List<Idea> toRemove = new ArrayList<>();
-        List<Integer> jewelsID = jewels.getL().stream().map(e-> (int) e.get("ID").getValue()).toList();
-        for (Idea impulse : impulses.getL()){
-            if (impulse.getValue().equals(this.impulseCat)){
-                if (!jewelsID.contains((int) impulse.get("State.ID").getValue())){
-                    toRemove.add(impulse);
+        List<Memory> toRemove = new ArrayList<>();
+        List<Integer> jewelsID = jewels.getL().stream().map(e-> (int) e.get("ID").getValue()).collect(Collectors.toList());
+        List<Memory> impulsesMemories = impulsesMO.getAllMemories();
+        synchronized (impulsesMemories) {
+            for (Memory impulseMem : impulsesMemories){
+                Idea impulse = (Idea) impulseMem.getI();
+                if (impulse.getValue().equals(this.impulseCat)){
+                    if (!jewelsID.contains((int) impulse.get("State.ID").getValue())){
+                        toRemove.add(impulseMem);
+                    }
                 }
             }
-        }
-        synchronized (impulsesMO) {
-            this.impulses = (Idea) impulsesMO.getI();
-            List<Idea> currL = impulses.getL();
-            currL.removeAll(toRemove);
-            impulses.setL(currL);
+            impulsesMemories.removeAll(toRemove);
         }
     }
 
@@ -103,7 +101,7 @@ public class GoToJewelImpulse extends Codelet {
 
     private Idea createImpulse(Idea jewel, double desirability) {
         Idea impulse = new Idea("Impulse", this.impulseCat, "Episode", 0);
-        Idea state = new Idea("State", null, "Timestamp", 0);
+        Idea state = new Idea("State", null, "Timestep", 0);
         Idea self = new Idea("Self", null, "AbstractObject", 1);
         self.add(jewel.get("Position").clone());
         state.add(self);
@@ -114,28 +112,14 @@ public class GoToJewelImpulse extends Codelet {
     }
 
     public void addIfNotPresent(Idea idea){
-        int presentInIdx = -1;
-        for (Idea present : impulses.getL()){
-            if ((int) present.get("State.ID").getValue() == (int) idea.get("State.ID").getValue()
-                    && present.getValue().equals(this.impulseCat))
-                presentInIdx = impulses.getL().indexOf(present); //Ineficient please chnge
-        }
-        if (presentInIdx != -1){
-            impulses.getL().remove(presentInIdx);
-        }
-        impulses.add(idea);
+        impulsesMO.setI(idea,
+                (double) idea.get("State.Desire").getValue(),
+                this.impulseCat + idea.get("State.ID").getValue());
     }
 
     public void removeIfPresent(Idea jewel){
-        int presentInIdx = -1;
-        for (Idea present : impulses.getL()){
-            if ((int) present.get("State.ID").getValue() == (int) jewel.get("ID").getValue()
-                    && present.getValue().equals(this.impulseCat)){
-                presentInIdx = impulses.getL().indexOf(present);
-            }
-        }
-        if (presentInIdx != -1){
-            impulses.getL().remove(presentInIdx);
-        }
+        impulsesMO.setI(jewel,
+                -1.0,
+                this.impulseCat + jewel.get("ID").getValue());
     }
 }
